# betaMax

./: .dockerignore  .gitignore  ARTIFACT_ABSTRACT.md  Appendix.md  Dockerfile  Makefile  README.md  bench_validators.py  bm_NE_ablation.py  bm_ablation.py  bm_betamax_backend.py  bm_betamax_profile.py  bm_ddmax_backend.py  bm_iso8601_mixed500.py  bm_lstar_mutations.py  bm_multiple copy.py  bm_multiple.py  bm_multiple_learner_ablation.py  bm_mutationcap_ablation.py  bm_positive_seed_ablation.py  bm_single.py  bm_triple.py  bm_truncation.py  bm_xover_checks_ablation.py  build_all.sh  copy_erepair_rows.py  double.db  erepair  erepair.cpp  erepair_xcrun  grammar_complex.py  match.py  match_partial.py  mutation_double.py  mutation_single.py  mutation_triple.py  mutation_truncated.py  report.py  report_docker.py  requirements.txt  (+45 more)
betamax/: pyproject.toml  requirements-local.txt
betamax/lstar/: betamax.py  ec_runtime.py  rpni_xover.py  test_ec_delete.py
betamax_cpp/: CMakeLists.txt  README.md
betamax_cpp/src/: main.cpp
cache/: lstar_date_rpni_xover.dfa  lstar_ipv4_rpni_xover.dfa  lstar_ipv6_rpni_xover.dfa  lstar_isbn_rpni_xover.dfa  lstar_time_rpni_xover.dfa  lstar_url_rpni_xover.dfa
cache_double_k12/: lstar_date_rpni.json  lstar_ipv4_rpni.json  lstar_ipv6_rpni_xover.json  lstar_isbn_rpni.json  lstar_time_rpni_xover.json  lstar_url_rpni.json
cache_double_k25/: lstar_date_rpni_xover.json  lstar_ipv4_rpni.json  lstar_ipv6_rpni.json  lstar_isbn_rpni_xover.json  lstar_time_rpni_xover.json  lstar_url_rpni.json
cache_double_k6/: lstar_date_rpni_xover.json  lstar_ipv4_rpni_xover.json  lstar_ipv6_rpni.json  lstar_isbn_rpni.json  lstar_time_rpni_xover.json  lstar_url_rpni.json
cache_mut100/: lstar_date_rpni_xover.dfa  lstar_time_rpni_xover.dfa  lstar_url_rpni_xover.dfa
cache_single_k12/: lstar_date_rpni_xover.json  (+5 more)
(+234 files in other folders)
