[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lstar-learning"
version = "0.1.0"
description = "Angluin L* regular language learning (observation table, teachers, and utilities)."
readme = "lstar/README.md"
requires-python = ">=3.8"
authors = [{ name = "Rahul Gopinath" }]
license = { text = "MIT" }
keywords = ["L*", "Angluin", "grammar inference", "regular language", "DFA", "PAC learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Note: runtime dependencies (simplefuzzer, rxfuzzer, etc.) are provided as local wheels under
# `betamax/py/` (from the repo root). Install them via: pip install -r requirements.txt
# We intentionally do not declare them here to avoid failing pip installs outside this repo.

[tool.setuptools.packages.find]
include = ["lstar*"]

[tool.setuptools]
include-package-data = true

[project.scripts]
lstar-example = "lstar.example:main"
lstar-positive-example = "lstar.positive_example:main"
lstar-sample-teacher-example = "lstar.sample_teacher_example:main"
